@@ -1,5 +1,11 @@
 2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03418] Re: tab browser
+	* display.c (redrawNLine): s/clrtoeol/clrtoeolx/
+				move rootY
+
+2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03417] install_w3mimgdisplay
 	* configure: define install_w3mimgdisplay 
 			after use_w3mimg_fb determined
@@ -4583,4 +4589,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.504 2002/11/12 12:44:49 ukai Exp $
+$Id: ChangeLog,v 1.505 2002/11/12 12:46:53 ukai Exp $
